--- a/Swift_App_Duciel_Picart/Swift_App_Duciel_Picart/Base.lproj/Main.storyboard
+++ b/Swift_App_Duciel_Picart/Swift_App_Duciel_Picart/Base.lproj/Main.storyboard
@@ -29,29 +29,66 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uS2-KN-nId">
-                                <rect key="frame" x="158" y="405" width="75" height="35"/>
+                                <rect key="frame" x="158" y="503" width="75" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="E94-nF-FTQ">
+                                <rect key="frame" x="147" y="349" width="97" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="kDF-Bb-6s9"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JEF-Ak-AF5">
+                                <rect key="frame" x="147" y="423" width="97" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="34" id="ST1-vR-boA"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="1024.png" translatesAutoresizingMaskIntoConstraints="NO" id="M7a-bt-BWe">
+                                <rect key="frame" x="75" y="144" width="240" height="128"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QCw-rG-CL9">
+                                <rect key="frame" x="100" y="568" width="191" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Je n'ai pas de compte"/>
                                 <connections>
-                                    <segue destination="4UA-AI-LxQ" kind="show" id="bHG-w3-9Zn"/>
+                                    <segue destination="4UA-AI-LxQ" kind="show" id="Jqw-C2-1wt"/>
                                 </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="QCw-rG-CL9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="2RQ-hm-b37"/>
                             <constraint firstItem="vsb-JW-2a1" firstAttribute="top" secondItem="dDn-NJ-hAH" secondAttribute="bottom" constant="32" id="3pi-8p-C0A"/>
+                            <constraint firstItem="E94-nF-FTQ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="147" id="6PV-Wt-38C"/>
+                            <constraint firstItem="M7a-bt-BWe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="75" id="6pB-Ol-ZgA"/>
                             <constraint firstItem="dDn-NJ-hAH" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="A3U-KU-H8F"/>
                             <constraint firstItem="dDn-NJ-hAH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="632" id="A9S-Xa-RW5"/>
+                            <constraint firstItem="M7a-bt-BWe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="53" id="P4J-fQ-U9x"/>
+                            <constraint firstItem="QCw-rG-CL9" firstAttribute="top" secondItem="uS2-KN-nId" secondAttribute="bottom" constant="30" id="Pf0-X6-4N8"/>
                             <constraint firstItem="uS2-KN-nId" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="158" id="UGq-HJ-p0H"/>
                             <constraint firstItem="uS2-KN-nId" firstAttribute="centerX" secondItem="dDn-NJ-hAH" secondAttribute="centerX" id="Uvz-ql-ulG"/>
                             <constraint firstItem="dDn-NJ-hAH" firstAttribute="centerX" secondItem="vsb-JW-2a1" secondAttribute="centerX" id="Wn4-hJ-ba4"/>
-                            <constraint firstItem="uS2-KN-nId" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ewL-pq-nCN"/>
-                            <constraint firstItem="uS2-KN-nId" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="314" id="kk0-Ft-1FN"/>
+                            <constraint firstItem="JEF-Ak-AF5" firstAttribute="top" secondItem="E94-nF-FTQ" secondAttribute="bottom" constant="40" id="XCm-Bj-cWi"/>
+                            <constraint firstItem="uS2-KN-nId" firstAttribute="top" secondItem="JEF-Ak-AF5" secondAttribute="bottom" constant="46" id="Yqh-Sp-cMM"/>
+                            <constraint firstItem="E94-nF-FTQ" firstAttribute="trailing" secondItem="JEF-Ak-AF5" secondAttribute="trailing" id="bCE-is-p80"/>
+                            <constraint firstItem="M7a-bt-BWe" firstAttribute="centerX" secondItem="E94-nF-FTQ" secondAttribute="centerX" id="eOW-Xm-nLF"/>
+                            <constraint firstItem="uS2-KN-nId" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" constant="98.5" id="ewL-pq-nCN"/>
+                            <constraint firstItem="E94-nF-FTQ" firstAttribute="top" secondItem="M7a-bt-BWe" secondAttribute="bottom" constant="77" id="g44-0D-jbH"/>
+                            <constraint firstItem="uS2-KN-nId" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="412" id="kk0-Ft-1FN"/>
+                            <constraint firstItem="uS2-KN-nId" firstAttribute="centerX" secondItem="QCw-rG-CL9" secondAttribute="centerX" id="njD-Os-asC"/>
+                            <constraint firstItem="JEF-Ak-AF5" firstAttribute="centerX" secondItem="uS2-KN-nId" secondAttribute="centerX" id="tHD-Le-lsB"/>
                             <constraint firstItem="dDn-NJ-hAH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="108" id="x4B-Mg-MrI"/>
+                            <constraint firstItem="E94-nF-FTQ" firstAttribute="leading" secondItem="JEF-Ak-AF5" secondAttribute="leading" id="yxk-oK-0aq"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Welcome" id="rOx-gX-srS"/>
+                    <navigationItem key="navigationItem" title="Connexion" id="rOx-gX-srS"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -73,26 +110,45 @@
             </objects>
             <point key="canvasLocation" x="-725" y="-2"/>
         </scene>
-        <!--Main Controller-->
+        <!--Inscription-->
         <scene sceneID="EEE-yB-NQh">
             <objects>
-                <viewController id="4UA-AI-LxQ" customClass="MainController" customModule="Swift_App_Duciel_Picart" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Inscription" id="4UA-AI-LxQ" customClass="MainController" customModule="Swift_App_Duciel_Picart" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="fyL-WU-tPV">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SecondPage" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c9r-Gn-txo">
-                                <rect key="frame" x="147" y="412" width="97" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ggJ-8v-lEs">
+                                <rect key="frame" x="147" y="335" width="97" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="UDt-sR-uAR">
+                                <rect key="frame" x="147" y="405" width="97" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q5W-lD-eMd">
+                                <rect key="frame" x="158" y="503" width="75" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="YlF-qg-Sws"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="ggJ-8v-lEs" firstAttribute="leading" secondItem="UDt-sR-uAR" secondAttribute="leading" id="8Tt-5S-g30"/>
+                            <constraint firstItem="ggJ-8v-lEs" firstAttribute="leading" secondItem="YlF-qg-Sws" secondAttribute="leading" constant="147" id="AQu-Ff-gMy"/>
+                            <constraint firstItem="UDt-sR-uAR" firstAttribute="centerY" secondItem="fyL-WU-tPV" secondAttribute="centerY" id="FNN-Gp-1ww"/>
+                            <constraint firstItem="ggJ-8v-lEs" firstAttribute="trailing" secondItem="UDt-sR-uAR" secondAttribute="trailing" id="OeM-KB-c2c"/>
+                            <constraint firstItem="ggJ-8v-lEs" firstAttribute="top" secondItem="YlF-qg-Sws" secondAttribute="top" constant="244" id="OrK-z5-9xK"/>
+                            <constraint firstItem="Q5W-lD-eMd" firstAttribute="top" secondItem="UDt-sR-uAR" secondAttribute="bottom" constant="64" id="XPA-ip-6BL"/>
+                            <constraint firstItem="ggJ-8v-lEs" firstAttribute="centerX" secondItem="fyL-WU-tPV" secondAttribute="centerX" id="gkN-lG-5ua"/>
+                            <constraint firstItem="UDt-sR-uAR" firstAttribute="centerX" secondItem="Q5W-lD-eMd" secondAttribute="centerX" id="uM2-RR-xyV"/>
+                            <constraint firstItem="Q5W-lD-eMd" firstAttribute="leading" secondItem="YlF-qg-Sws" secondAttribute="leading" constant="158" id="vln-nx-8Gl"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="U2q-b2-FVW"/>
+                    <navigationItem key="navigationItem" title="Inscription" style="browser" id="U2q-b2-FVW"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="7hG-Sz-cCo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -100,6 +156,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="1024.png" width="1024" height="1024"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
