ajout classe utilisateur et modification icon et titre

--- a/Swift_App_Duciel_Picart/Swift_App_Duciel_Picart/Base.lproj/Main.storyboard
+++ b/Swift_App_Duciel_Picart/Swift_App_Duciel_Picart/Base.lproj/Main.storyboard
@@ -140,11 +140,11 @@
             </objects>
             <point key="canvasLocation" x="-671" y="2148"/>
         </scene>
-        <!--Conversation-->
+        <!--Conversations-->
         <scene sceneID="sJf-dR-dem">
             <objects>
                 <navigationController id="nca-16-gdP" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Conversation" image="message.fill" catalog="system" id="aJM-hN-C9I"/>
+                    <tabBarItem key="tabBarItem" title="Conversations" image="message.fill" catalog="system" id="aJM-hN-C9I"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="8gq-vO-YMm">
                         <rect key="frame" x="0.0" y="47" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -166,23 +166,68 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7aq-yK-RET">
-                                <rect key="frame" x="122" y="661" width="147" height="35"/>
+                                <rect key="frame" x="122" y="657" width="147" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="tinted" title="Se Déconnecter"/>
                                 <connections>
                                     <action selector="onClickSignOutButton:" destination="sDB-UT-hgC" eventType="touchUpInside" id="Xfl-mD-Yhj"/>
                                 </connections>
                             </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="person.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="qmh-c5-gSn">
+                                <rect key="frame" x="75" y="138" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="129.33333333333331" id="gET-a3-zRW"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KCY-Vp-Mt3">
+                                <rect key="frame" x="170" y="328" width="50" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pseudo :" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="amQ-LH-7fw">
+                                <rect key="frame" x="162" y="426" width="66" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tj1-qL-PtL">
+                                <rect key="frame" x="147" y="455" width="97" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A4i-SO-Q85">
+                                <rect key="frame" x="167" y="357" width="56" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="9nB-B7-TVG"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="Tj1-qL-PtL" firstAttribute="centerX" secondItem="7aq-yK-RET" secondAttribute="centerX" id="57d-pK-3je"/>
+                            <constraint firstItem="KCY-Vp-Mt3" firstAttribute="top" secondItem="qmh-c5-gSn" secondAttribute="bottom" constant="61.666666666666686" id="594-a1-6iF"/>
+                            <constraint firstItem="qmh-c5-gSn" firstAttribute="leading" secondItem="9nB-B7-TVG" secondAttribute="leading" constant="75" id="5C6-YN-98x"/>
+                            <constraint firstItem="amQ-LH-7fw" firstAttribute="top" secondItem="A4i-SO-Q85" secondAttribute="bottom" constant="48" id="HTc-c9-etp"/>
+                            <constraint firstItem="A4i-SO-Q85" firstAttribute="top" secondItem="KCY-Vp-Mt3" secondAttribute="bottom" constant="8" id="Ihq-eb-QWh"/>
                             <constraint firstItem="7aq-yK-RET" firstAttribute="leading" secondItem="9nB-B7-TVG" secondAttribute="leading" constant="122" id="LIT-xP-Wje"/>
-                            <constraint firstItem="7aq-yK-RET" firstAttribute="top" secondItem="9nB-B7-TVG" secondAttribute="top" constant="614" id="NJb-ux-mB1"/>
+                            <constraint firstItem="Tj1-qL-PtL" firstAttribute="leading" secondItem="9nB-B7-TVG" secondAttribute="leading" constant="147" id="N8L-fZ-mOc"/>
+                            <constraint firstItem="7aq-yK-RET" firstAttribute="top" secondItem="9nB-B7-TVG" secondAttribute="top" constant="610" id="NJb-ux-mB1"/>
+                            <constraint firstItem="Tj1-qL-PtL" firstAttribute="top" secondItem="amQ-LH-7fw" secondAttribute="bottom" constant="8" id="Qfx-FO-Clb"/>
+                            <constraint firstItem="KCY-Vp-Mt3" firstAttribute="centerX" secondItem="A4i-SO-Q85" secondAttribute="centerX" id="UO6-OC-ZYq"/>
+                            <constraint firstItem="qmh-c5-gSn" firstAttribute="centerX" secondItem="KCY-Vp-Mt3" secondAttribute="centerX" id="Y5k-3n-xjd"/>
+                            <constraint firstItem="A4i-SO-Q85" firstAttribute="centerX" secondItem="amQ-LH-7fw" secondAttribute="centerX" id="gda-Ns-RmS"/>
                             <constraint firstItem="7aq-yK-RET" firstAttribute="centerX" secondItem="WCf-QI-8It" secondAttribute="centerX" id="iYy-bU-wQg"/>
+                            <constraint firstItem="qmh-c5-gSn" firstAttribute="top" secondItem="9nB-B7-TVG" secondAttribute="top" constant="90" id="x7i-7v-wRj"/>
+                            <constraint firstItem="amQ-LH-7fw" firstAttribute="centerX" secondItem="Tj1-qL-PtL" secondAttribute="centerX" id="xd7-WQ-YIT"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Profil" image="person.fill" catalog="system" id="hz6-HA-tsY"/>
+                    <connections>
+                        <outlet property="email" destination="A4i-SO-Q85" id="VHg-ul-EGd"/>
+                        <outlet property="pseudo" destination="Tj1-qL-PtL" id="aCd-Sv-NlQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ywa-qS-Ftc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -328,9 +373,11 @@
             <point key="canvasLocation" x="781.53846153846155" y="-2.1327014218009479"/>
         </scene>
     </scenes>
+    <color key="tintColor" red="0.49543112516403198" green="0.65953177213668823" blue="0.91892200708389282" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
     <resources>
         <image name="ic_launcher.png" width="192" height="192"/>
         <image name="message.fill" catalog="system" width="128" height="114"/>
+        <image name="person.circle.fill" catalog="system" width="128" height="123"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
